Fix a spacing issue for some uses of panel

--- a/src/components/panel/_panel.scss
+++ b/src/components/panel/_panel.scss
@@ -6,3 +6,7 @@
     margin-right: 0;
   }
 }
+
+.form-group .panel-border-narrow {
+  padding-bottom: em(15, 19);
+}
